syntax = "proto3";

option csharp_namespace = "ZodiacSignsService.Protos";

service ZodiacSign{
    rpc GetZodiacSign(CustomerDate)returns (CustomerZodiacSign);
}

message CustomerZodiacSign{
     string zodiacSignName=1;
}

message CustomerDate{
   string date=1;
}

